# raycastmesh

./: .clang-format  CMakeLists.txt  README.md  RaycastMesh.cpp  RaycastMesh.h  RaycastMesh.sln  RaycastMesh.vcproj  ReadMe.txt  main.cpp
src/: RaycastMesh.cpp  RaycastMesh.h  main.cpp  stb_image_write.h  wavefront.cpp  wavefront.h
